# notion-recipe-organizer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  FEATURES.md  README.md  STATUS.md  TESTING.md  project_plan.md  project_structure.md  pyproject.toml  pytest.ini
config/: analysis_profiles.yaml  categories.yaml  conflict_rules.yaml  cuisines.yaml  dietary_tags.yaml  usage_tags.yaml
config/prompts/: base_prompt.txt
docs/: configuration.md  pipeline.md
docs/archive/: project_structure_old.md
src/: config.py  main.py  pipeline.py
src/commands/: __init__.py  analyze_cmd.py  apply_title_improvements_cmd.py  enhance_database_cmd.py  extract_cmd.py  pipeline_cmd.py  review_cmd.py  test_cmd.py
src/notion_client/: analyzer.py  client.py  config_loader.py  profile_loader.py  reviewer.py
src/utils/: __init__.py  config_utils.py  display_utils.py  file_utils.py  notion_utils.py
tests/: conftest.py
tests/integration/: test_commands.py  test_pipeline.py
tests/unit/: test_config_utils.py  test_file_utils.py  test_notion_utils.py
tests/unit/commands/: test_enhance_database_cmd.py
